# angular-app/SeaDuel/src/swagger/model/message.ts
@@ -13,4 +13,6 @@
 export interface Message {
   content?: string;
   time?: Date;
+  senderId?: string;
+  recipientId?: string;
 }
